FIX: Hide Horizontal Scrollbar and setting height

--- a/src/Skills.css
+++ b/src/Skills.css
@@ -26,3 +26,12 @@ h2.stroke:hover {
 h3 {
   font-family: 'TT Hoves DemiBold', sans-serif;
 }
+
+.scrollbarhide {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+}
+
+.scrollbarhide::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
